Hero title font and spacing fixed

--- a/migration-crisis/src/sass/_hero.scss
+++ b/migration-crisis/src/sass/_hero.scss
@@ -53,8 +53,14 @@ section.hero {
     font-size: 40px;
     margin-bottom: 22px;
     white-space: nowrap;
-    padding: 0 20px;
+    padding: 0 15px;
     display: inline;
+    font-weight: normal;
+    font-family: SkyTextMedium;
+
+    @media (min-width: 375px) {
+        padding: 0 20px;
+    }
 }
 
 .hero__text {
